GBSC-Pro-Source code/gbs-control/public/src/style.css
/* ... */
/* HELPERS */
[hidden] {
  display: none !important;
}

[gbs-progress]::before {
  content: attr(gbs-progress);
}

.gbs-backup-input {
  cursor: pointer;
  height: 100%;
  left: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.gbs-button[gbs-name="Empty"] ~ .gbs-button[gbs-name="Empty"] {
  display: none;
}

.gbs-help {
  color: var(--color-scorpion);
  display: flex;
  flex-direction: column;
  font-size: 14px;
  line-height: 18px;
  margin: 8px 0 16px 0;
  padding-left: 28px;
  text-align: left;
  white-space: pre-line;
}

.gbs-help-hide .gbs-help {
  display: none;
}

.gbs-icon {
  -webkit-font-feature-settings: "liga";
  -webkit-font-smoothing: antialiased;
  direction: ltr;
  display: inline-block;
  font-family: "Material Icons";
  font-size: 24px;
  font-style: normal;
  font-weight: normal;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  word-wrap: normal;
}

.gbs-flex {
  display: flex;
}

.gbs-margin__bottom--16 {
  margin-bottom: 16px;
}

.gbs-padding__left-16 {
  padding-left: 16px;
}

.gbs-padding__hor-16 {
  padding-left: 16px;
  padding-right: 16px;
}

@media (min-width: 415px) {
  .gbs-button:hover {
    border: 1px solid var(--color-primary);
    box-shadow: inset 0 0 6px 4px rgba(var(--color-primary-rgba), 0.2),
      0 0 6px 4px rgba(var(--color-primary-rgba), 0.2);
    color: var(--color-primary);
  }

  .gbs-button__secondary:hover {
    background-color: rgba(var(--color-secondary-rgba), 0.7);
    border: 1px solid rgba(var(--color-secondary-rgba), 0.3);
    box-shadow: inset 0 0 6px 4px rgba(var(--color-secondary-rgba), 0.2),
      0 0 6px 8px rgba(var(--color-secondary-rgba), 0.2);
    color: var(--color-black);
    transform: scale(0.98);
  }

  .gbs-button__control {
    height: 60px;
  }

  .gbs-menu {
    border-bottom: 1px solid rgba(var(--color-primary-rgba), 0.4);
    bottom: initial;
    padding-left: 8px;
    padding-right: 8px;
    position: relative;
    top: 0;
  }

  .gbs-menu__logo {
    display: inline-block;
  }

  .gbs-controls {
    display: none;
  }

  .gbs-controls__desktop {
    display: block;
  }

  .gbs-output {
    background-color: var(--color-mine-shaft-light);
    height: 100vh;
    left: 414px;
    position: fixed;
    top: 0px;
    width: calc(100vw - 414px);
    z-index: 1;
  }

  .gbs-output__textarea {
    height: calc(100vh - 163px);
  }

  .gbs-output-hide .gbs-container {
    border-radius: 16px;
    box-shadow: 0 0 64px 4px rgba(var(--color-primary-rgba), 0.4);
    display: block;
    height: calc(100vh - 64px);
    margin-top: 32px;
  }

  .gbs-fieldset-output {
    height: calc(100vh - 16px);
  }
}

@keyframes gbs-border-blinker {
  50% {
    border: 1px solid var(--color-warning);
  }
}

@keyframes gbs-blinker {
  50% {
    opacity: 0;
  }
}

